<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/work_bench"
        android:icon="@mipmap/desk_gray"
        android:title="@string/work_bench" />
    <item
        android:id="@+id/app_store"
        android:icon="@mipmap/apply_gray"
        android:title="@string/app_store" />
    <!--<item
        android:id="@+id/light_app"
        android:icon="@mipmap/apps_black"
        android:title="@string/light_app" />-->
    <item
        android:id="@+id/strategy"
        android:icon="@mipmap/strategy_gray"
        android:title="@string/stratege" />
    <item
        android:id="@+id/message"
        android:icon="@mipmap/message_gray"
        android:title="@string/message"/>
    <item
        android:id="@+id/tel_whitelist"
        android:icon="@mipmap/whitelist_gray"
        android:title="@string/tel_white" />
    <item
        android:id="@+id/setting"
        android:icon="@mipmap/setup_gray"
        android:title="@string/setting" />
</menu>