<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <Button
        android:id="@+id/btn_take_picture"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/actionsheet_top_selector"
        android:gravity="center"
        android:text="@string/take_photos"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/pale_gray"/>

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/actionsheet_bottom_selector"
        android:gravity="center"
        android:text="@string/pick_from_gallery"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/actionsheet_single_selector"
        android:gravity="center"
        android:text="@string/btnCancel"
        android:textColor="@color/blue"
        android:textSize="14sp"/>
</LinearLayout>