<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    android:layout_height="match_parent">
  <LinearLayout
      android:gravity="center"
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:background="@color/bg_gray"
      android:layout_height="match_parent">
      <ImageView
          android:layout_width="wrap_content"
          android:background="@drawable/nothing_icon_failed1"
          android:layout_height="wrap_content" />
      <TextView
          android:id="@+id/tv_content"
          android:layout_marginTop="12dp"
          android:layout_width="wrap_content"
          android:text="@string/load_failed"
          android:textSize="16sp"
          android:textColor="#333333"
          android:layout_height="wrap_content" />
      <TextView
          android:id="@+id/tv_describe"
          android:layout_marginTop="12dp"
          android:layout_width="wrap_content"
          android:text="@string/do_not_worry"
          android:textSize="14sp"
          android:textColor="#999999"
          android:layout_height="wrap_content" />
      <Button
          android:id="@+id/btn_data"
          android:layout_marginBottom="40dp"
          android:textSize="16dp"
          android:textColor="#e9af44"
          android:layout_marginTop="80dp"
          android:text="@string/load_refresh"
          android:background="@drawable/nothing_btn_goadd"
          android:layout_width="190dp"
          android:layout_height="35dp" />
  </LinearLayout>
</LinearLayout>
