<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_dialog_bg"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:visibility="visible"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:visibility="gone"
                android:background="@color/actionbar"
                android:layout_gravity="center"
                android:src="@drawable/page_icon_empty"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <!--<TextView

                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:text="额定流量"
                android:textColor="#000000"
                android:textSize="15sp"
                />-->
            <TextView
                android:id="@+id/title"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/limited_data"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/v_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="？？？？？？"
        android:textColor="@color/gray"
        android:textSize="15sp"
        />
<!-- android:gravity="center"-->
 <!--   <View
        android:id="@+id/line_img_bt"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        />-->

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:weightSum="2"
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:background="@color/white"
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btnCancel"
            android:textColor="@color/black"
            android:textSize="17sp"
            />

       <!-- <View
            android:id="@+id/line_img"
            android:layout_width="0.5dp"
            android:layout_height="40dp"
            android:background="@color/line_color"
            android:visibility="gone"
            />-->

        <Button
            android:background="@color/white"
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bt_dialog_sure"
            android:textSize="17sp"
            android:textColor="@color/black"
            />

    </LinearLayout>
</LinearLayout>